--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "write": "prettier . --write"
     },
     "dependencies": {
+        "convex": "^1.24.1",
         "next": "15.3.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
