DEV-6 chore(tsconfig): update configuration for Convex compatibility
- Add 'components/convex-client-provider.jsx' to include paths
- Maintain existing strict TypeScript settings
- Ensure proper type checking for Convex client files

# Changes:
# - Added JSX provider file to TypeScript compilation
# - No breaking changes to existing config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
     "compilerOptions": {
         "target": "ESNext",
-        "lib": ["dom", "dom.iterable", "esnext"],
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
         "allowJs": false,
         "skipLibCheck": false,
         "strict": true,
@@ -19,9 +23,19 @@
             }
         ],
         "paths": {
-            "@/*": ["./*"]
+            "@/*": [
+                "./*"
+            ]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-    "exclude": ["node_modules"]
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "components/convex-client-provider.jsx"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
