DEV-7 feat(auth): integrate Clerk authentication
- Install Clerk dependencies via pnpm:
  `pnpm add @clerk/nextjs @clerk/types`
- Configure Clerk provider in root layout
- Set up environment variables:
  NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
  CLERK_SECRET_KEY
- Add TypeScript types for Clerk
- Implement basic auth components

# Setup Details:
# - Properly typed Clerk integration
# - Environment variables validation
# - Next.js App Router compatible
# - Includes necessary type definitions

# Verification:
# - Sign-up/sign-in flows working
# - Auth state accessible client/server side
# - TypeScript checks passing

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "write": "prettier . --write"
     },
     "dependencies": {
+        "@clerk/nextjs": "^6.19.3",
         "convex": "^1.24.1",
         "next": "15.3.2",
         "react": "^19.1.0",
