--- a/package.json
+++ b/package.json
@@ -11,9 +11,27 @@
         "write": "prettier . --write"
     },
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.1.9",
+        "@radix-ui/react-dialog": "^1.1.13",
+        "@radix-ui/react-label": "^2.1.6",
+        "@radix-ui/react-popover": "^1.1.13",
+        "@radix-ui/react-radio-group": "^1.3.6",
+        "@radix-ui/react-select": "^2.2.4",
+        "@radix-ui/react-slider": "^1.3.4",
+        "@radix-ui/react-slot": "^1.2.2",
+        "@radix-ui/react-tabs": "^1.1.11",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
+        "date-fns": "^4.1.0",
+        "lucide-react": "^0.510.0",
         "next": "15.3.2",
+        "next-themes": "^0.4.6",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-day-picker": "8.10.1",
+        "react-dom": "^19.1.0",
+        "sonner": "^2.0.3",
+        "tailwind-merge": "^3.3.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
@@ -26,6 +44,7 @@
         "eslint-config-prettier": "^10.1.5",
         "prettier": "^3.5.3",
         "tailwindcss": "^4.1.6",
+        "tw-animate-css": "^1.2.9",
         "typescript": "^5.8.3"
     }
 }
