DEV-5 backend and authentication integration (#2)
* DEV-6 feat: add Convex + Next.js integration

- Install `convex` and `@convex-dev/react` via pnpm
- Initialize Convex project with `npx convex init`
- Add ConvexProvider to Next.js root layout
- Implement basic query example (e.g. `useQuery('messages')`)

* DEV-6 chore(config): add Convex packages to transpilePackages

- Add 'convex' and 'convex-react' to Next.js transpilePackages
- Ensure proper client-side bundling for Convex dependencies
- Fix potential "Module not found" errors in production build

# Change Details:
# Modified next.config.js to transpile Convex packages

* DEV-6 chore(tsconfig): update configuration for Convex compatibility

- Add 'components/convex-client-provider.jsx' to include paths
- Maintain existing strict TypeScript settings
- Ensure proper type checking for Convex client files

# Changes:
# - Added JSX provider file to TypeScript compilation
# - No breaking changes to existing config

* DEV-6 feat(providers): integrate Convex client provider in root layout

- Import ConvexClientProvider from '@/components'
- Wrap application with ConvexClientProvider
- Prepare for future Header component integration
- Maintain existing font and metadata setup

# Implementation Notes:
# - ConvexClientProvider enables Convex functionality app-wide
# - Header component placeholder added (currently commented out)
# - No breaking changes to existing layout structure

# Next Steps:
# - Uncomment <Header /> when component is ready
# - Ensure Header works with Convex client context

* DEV-6 feat(convex): create client provider component

- Add new convex-client-provider.tsx component
- Implement ConvexProvider with ReactClient
- Type-safe props for children
- Environment variable integration for Convex URL

# Component Details:
# - 'use client' directive for client-side functionality
# - Uses ConvexReactClient with NEXT_PUBLIC_CONVEX_URL
# - Proper TypeScript typing for React children
# - Exported as reusable 

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "write": "prettier . --write"
     },
     "dependencies": {
+        "@clerk/nextjs": "^6.19.3",
+        "convex": "^1.24.1",
         "@radix-ui/react-avatar": "^1.1.9",
         "@radix-ui/react-dialog": "^1.1.13",
         "@radix-ui/react-label": "^2.1.6",
