--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "write": "prettier . --write"
     },
     "dependencies": {
-        "@clerk/nextjs": "^6.19.3",
-        "convex": "^1.24.1",
+        "@clerk/nextjs": "^6.19.4",
         "@radix-ui/react-avatar": "^1.1.9",
         "@radix-ui/react-dialog": "^1.1.13",
         "@radix-ui/react-label": "^2.1.6",
@@ -25,28 +24,31 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
+        "convex": "^1.24.1",
         "date-fns": "^4.1.0",
-        "lucide-react": "^0.510.0",
+        "inngest": "^3.36.0",
+        "lucide-react": "^0.511.0",
         "next": "15.3.2",
         "next-themes": "^0.4.6",
         "react": "^19.1.0",
-        "react-day-picker": "8.10.1",
+        "react-day-picker": "9.7.0",
         "react-dom": "^19.1.0",
+        "react-spinners": "^0.17.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.3.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
-        "@tailwindcss/postcss": "^4.1.6",
-        "@types/node": "^22.15.17",
-        "@types/react": "^19.1.3",
-        "@types/react-dom": "^19.1.3",
-        "eslint": "^9.26.0",
+        "@tailwindcss/postcss": "^4.1.7",
+        "@types/node": "^22.15.18",
+        "@types/react": "^19.1.4",
+        "@types/react-dom": "^19.1.5",
+        "eslint": "^9.27.0",
         "eslint-config-next": "15.3.2",
         "eslint-config-prettier": "^10.1.5",
         "prettier": "^3.5.3",
-        "tailwindcss": "^4.1.6",
-        "tw-animate-css": "^1.2.9",
+        "tailwindcss": "^4.1.7",
+        "tw-animate-css": "^1.3.0",
         "typescript": "^5.8.3"
     }
 }
