DEV-15 contacs page and routing setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
         "**/*.tsx",
         ".next/types/**/*.ts",
         "components/convex-client-provider.jsx"
-    ],
+, "convex/seed.js"    ],
     "exclude": ["node_modules"]
 }
