Convex setup + seed script added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
         "**/*.ts",
         "**/*.tsx",
         ".next/types/**/*.ts",
-        "components/convex-client-provider.jsx"
-, "convex/seed.js"    ],
+        "components/convex-client-provider.jsx",
+        "convex/seed.js"
+    ],
     "exclude": ["node_modules"]
 }
