--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@clerk/nextjs": "^6.19.4",
+        "@hookform/resolvers": "^5.0.1",
         "@radix-ui/react-avatar": "^1.1.9",
         "@radix-ui/react-dialog": "^1.1.13",
         "@radix-ui/react-label": "^2.1.6",
@@ -33,9 +34,11 @@
         "react": "^19.1.0",
         "react-day-picker": "9.7.0",
         "react-dom": "^19.1.0",
+        "react-hook-form": "^7.56.4",
         "react-spinners": "^0.17.0",
         "sonner": "^2.0.3",
-        "tailwind-merge": "^3.3.0"
+        "tailwind-merge": "^3.3.0",
+        "zod": "^3.25.28"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
