--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
         "@tailwindcss/postcss": "^4.1.7",
+        "@types/node": "^22.15.22",
         "@types/react": "19.1.5",
         "@types/react-dom": "^19.1.5",
         "autoprefixer": "^10.4.21",
@@ -59,6 +60,7 @@
         "eslint-config-prettier": "^10.1.5",
         "postcss": "^8.5.3",
         "prettier": "^3.5.3",
-        "tailwindcss": "^4.1.7"
+        "tailwindcss": "^4.1.7",
+        "typescript": "^5.8.3"
     }
 }
