--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
     "compilerOptions": {
         "target": "ESNext",
-        "lib": ["dom", "dom.iterable", "esnext"],
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
         "allowJs": false,
         "skipLibCheck": false,
         "strict": true,
@@ -19,7 +23,9 @@
             }
         ],
         "paths": {
-            "@/*": ["./*"]
+            "@/*": [
+                "./*"
+            ]
         }
     },
     "include": [
@@ -29,7 +35,10 @@
         "**/*.tsx",
         ".next/types/**/*.ts",
         "components/convex-client-provider.jsx",
-        "convex/seed.js"
+        "convex/seed.js",
+        "convex/expenses.ts"
     ],
-    "exclude": ["node_modules"]
+    "exclude": [
+        "node_modules"
+    ]
 }
