--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
         "@tailwindcss/postcss": "^4.1.7",
+        "@types/lodash": "^4.17.17",
         "@types/node": "^22.15.22",
         "@types/react": "19.1.5",
         "@types/react-dom": "^19.1.5",
