DEV-32, DEV-33, DEV-34 cron jobs completed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,6 @@
             "@/*": ["./*"]
         }
     },
-    "include": [
-        "new-env.d.ts",
-        "next-env.d.ts",
-        "**/*.ts",
-        "**/*.tsx",
-        ".next/types/**/*.ts",
-        "components/convex-client-provider.jsx"
-    ],
+    "include": ["new-env.d.ts", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
     "exclude": ["node_modules"]
 }
